Fixed up tests, continued to make server more ready to deploy